fixing images display

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </p>
             <a href="#about"><button class="btn">About Me <i class="fas fa-user"></i></button></a>
         </div>
-        <div class="column"><img src="/images/ghibli.gif" style="margin-left: 50px; margin-top: 5px"></div>
+        <div class="column"><img src="images/ghibli.gif" style="margin-left: 50px; margin-top: 5px"></div>
     </div>
 </section>
 
@@ -70,13 +70,13 @@
             </p>
             <div class="row">
                 <div class="column" style="width:100px;height:auto">
-                    <img src="/images/ccpbadge.png" style="width:350px;height:auto;margin-top:100px;margin-left:50px">
+                    <img src="images/ccpbadge.png" style="width:350px;height:auto;margin-top:100px;margin-left:50px">
                 </div>
                 <div class="column" style="width:10px;height:auto;margin-left:350px">
-                    <img src="/images/tennisball.gif" style="width:500px;height:auto;margin-top:30px; margin-left:0px">
+                    <img src="images/tennisball.gif" style="width:500px;height:auto;margin-top:30px; margin-left:0px">
                 </div>
                 <div class="column" style="width:10px;height:auto">
-                    <img src="/images/hiking.jpg" style="width:500px;height:auto;margin-left:500px;margin-top:125px">
+                    <img src="images/hiking.jpg" style="width:500px;height:auto;margin-left:500px;margin-top:125px">
                 </div>
                 
             </div>
