--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="column">
-            <img src="/images/thehartford.png" style="width:250px;height:auto; margin-left:575px;margin-top:50px">
+            <img src="images/thehartford.png" style="width:250px;height:auto; margin-left:575px;margin-top:50px">
         </div>
     </div>
 </div>
@@ -126,7 +126,7 @@
             </div>
         </div>
         <div class="column">
-            <img src="/images/selective.png" style="width:200px;height:auto; margin-left:600px;margin-top:50px">
+            <img src="images/selective.png" style="width:200px;height:auto; margin-left:600px;margin-top:50px">
         </div>
     </div>
 </div>
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="column">
-            <img src="/images/selective.png" style="width:200px;height:auto; margin-left:600px;margin-top:50px">
+            <img src="images/selective.png" style="width:200px;height:auto; margin-left:600px;margin-top:50px">
         </div>
     </div>
 </div>
@@ -173,7 +173,7 @@
             </div>
         </div>
         <div class="column">
-            <img src="/images/umass.png" style="width: 200px;height:auto; margin-left:600px">
+            <img src="images/umass.png" style="width: 200px;height:auto; margin-left:600px">
         </div>
     </div>
 </div>
