--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
         </ul>
     </div>
     <div class="column">
-        <img src="/images/mathgif.gif" style="width:300px;height:auto;">
+        <img src="images/mathgif.gif" style="width:300px;height:auto;">
     </div>
     
     <div class="column">
-        <img src="/images/programming-gif.gif" style="width:350px;height:auto;margin-left:400px;">
+        <img src="images/programming-gif.gif" style="width:350px;height:auto;margin-left:400px;">
     </div>
 </div>
 
